fix border flicker

--- a/src/components/Layout/Header/Navbar/NavLink/NavLink.module.css
+++ b/src/components/Layout/Header/Navbar/NavLink/NavLink.module.css
@@ -8,7 +8,7 @@
 }
 
 .active > .bordered {
-  border: none !important;
+  border-color: transparent !important;
 }
 
 .active > .link {
